--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Packets\SelectedPacket.cs" />
     <Compile Include="Packets\SetActionPacket.cs" />
     <Compile Include="Packets\SetClipsPacket.cs" />
+    <Compile Include="Packets\SetSkillBarPacket.cs" />
     <Compile Include="Packets\SetSkillPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
@@ -163,6 +164,7 @@
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Events\SetActionPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetClipsPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SetSkillBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetSkillPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
