--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Packets\SetClipsPacket.cs" />
     <Compile Include="Packets\SetSkillBarPacket.cs" />
     <Compile Include="Packets\SetSkillPacket.cs" />
+    <Compile Include="Packets\SetSpellBarPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -166,6 +167,7 @@
     <Compile Include="Sockets\Events\SetClipsPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetSkillBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetSkillPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SetSpellBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
