--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Packets\ShowHouseLockPacket.cs" />
     <Compile Include="Packets\ShowObjectPacket.cs" />
     <Compile Include="Packets\SkinningPacket.cs" />
+    <Compile Include="Packets\SoundPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Sockets\Events\ShowHouseLockPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ShowObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SkinningPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SoundPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
