--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Packets\SpecBarPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
+    <Compile Include="Packets\SpellPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -184,6 +185,7 @@
     <Compile Include="Sockets\Events\SpecBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SpellPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
