--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
     <Compile Include="Packets\SpellPacket.cs" />
     <Compile Include="Packets\StatisticPacket.cs" />
+    <Compile Include="Packets\StatusPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -188,6 +189,7 @@
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StatisticPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\StatusPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
