--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Packets\SpellPacket.cs" />
     <Compile Include="Packets\StatisticPacket.cs" />
     <Compile Include="Packets\StatusPacket.cs" />
+    <Compile Include="Packets\StopPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -190,6 +191,7 @@
     <Compile Include="Sockets\Events\SpellPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StatisticPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StatusPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\StopPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
