--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Packets\SetSkillPacket.cs" />
     <Compile Include="Packets\SetSpellBarPacket.cs" />
     <Compile Include="Packets\SetTextPacket.cs" />
+    <Compile Include="Packets\SetVariablePacket.cs" />
     <Compile Include="Packets\ShowHouseLockPacket.cs" />
     <Compile Include="Packets\ShowObjectPacket.cs" />
     <Compile Include="Packets\SkinningPacket.cs" />
@@ -180,6 +181,7 @@
     <Compile Include="Sockets\Events\SetSkillPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetSpellBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SetTextPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SetVariablePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ShowHouseLockPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ShowObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SkinningPacketReceivedEvent.cs" />
