--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Packets\StatisticPacket.cs" />
     <Compile Include="Packets\StatusPacket.cs" />
     <Compile Include="Packets\StopPacket.cs" />
+    <Compile Include="Packets\TakeFromBagPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -194,6 +195,7 @@
     <Compile Include="Sockets\Events\StatisticPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StatusPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StopPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\TakeFromBagPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
