--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Packets\StatusPacket.cs" />
     <Compile Include="Packets\StopPacket.cs" />
     <Compile Include="Packets\TakeFromBagPacket.cs" />
+    <Compile Include="Packets\TickPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -196,6 +197,7 @@
     <Compile Include="Sockets\Events\StatusPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\StopPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TakeFromBagPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\TickPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
