--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Packets\StopPacket.cs" />
     <Compile Include="Packets\TakeFromBagPacket.cs" />
     <Compile Include="Packets\TickPacket.cs" />
+    <Compile Include="Packets\ToolIconPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Sockets\Events\StopPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TakeFromBagPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TickPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ToolIconPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
