--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Packets\TakeFromBagPacket.cs" />
     <Compile Include="Packets\TickPacket.cs" />
     <Compile Include="Packets\ToolIconPacket.cs" />
+    <Compile Include="Packets\TradeWindowPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Sockets\Events\TakeFromBagPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TickPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ToolIconPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\TradeWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
