--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Packets\TickPacket.cs" />
     <Compile Include="Packets\ToolIconPacket.cs" />
     <Compile Include="Packets\TradeWindowPacket.cs" />
+    <Compile Include="Packets\WarpPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -202,6 +203,7 @@
     <Compile Include="Sockets\Events\TickPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ToolIconPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TradeWindowPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\WarpPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
