--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Packets\ToolIconPacket.cs" />
     <Compile Include="Packets\TradeWindowPacket.cs" />
     <Compile Include="Packets\WarpPacket.cs" />
+    <Compile Include="Packets\WeatherPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -204,6 +205,7 @@
     <Compile Include="Sockets\Events\ToolIconPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\TradeWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\WarpPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\WeatherPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
