--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Packets\TradeWindowPacket.cs" />
     <Compile Include="Packets\WarpPacket.cs" />
     <Compile Include="Packets\WeatherPacket.cs" />
+    <Compile Include="Packets\WLevelPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -206,6 +207,7 @@
     <Compile Include="Sockets\Events\TradeWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\WarpPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\WeatherPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\WLevelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
