--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -36,11 +36,13 @@
     <Compile Include="PacketFactory.cs" />
     <Compile Include="PacketList.cs" />
     <Compile Include="Packets\ActionPacket.cs" />
+    <Compile Include="Packets\AddCharacterPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ActionPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\AddCharacterPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
