--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Packets\ActionPacket.cs" />
     <Compile Include="Packets\AddCharacterPacket.cs" />
     <Compile Include="Packets\AddObjectPacket.cs" />
+    <Compile Include="Packets\AddPlayerPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -45,6 +46,7 @@
     <Compile Include="Sockets\Events\ActionPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AddCharacterPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AddObjectPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\AddPlayerPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
