--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Packets\GetVariablePacket.cs" />
     <Compile Include="Packets\GoodbyePacket.cs" />
     <Compile Include="Packets\GuildMiscellaneousPacket.cs" />
+    <Compile Include="Packets\HandshakePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="Sockets\Events\GuildMiscellaneousPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\GetVariablePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\GoodbyePacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\HandshakePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
