--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Packets\AttributePacket.cs" />
     <Compile Include="Packets\BackgroundColorPacket.cs" />
     <Compile Include="Packets\BattleTextMiscellaneousPacket.cs" />
+    <Compile Include="Packets\ChatChannelPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="Sockets\Events\AttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\BackgroundColorPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\BattleTextMiscellaneousPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ChatChannelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
