--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Packets\BattleTextMiscellaneousPacket.cs" />
     <Compile Include="Packets\CharacterAttributePacket.cs" />
     <Compile Include="Packets\ChatChannelPacket.cs" />
+    <Compile Include="Packets\ClearSpellPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Sockets\Events\BattleTextMiscellaneousPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\CharacterAttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ChatChannelPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ClearSpellPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
