--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Packets\OpenUrlPacket.cs" />
     <Compile Include="Packets\OpenWindowPacket.cs" />
     <Compile Include="Packets\PartyPacket.cs" />
+    <Compile Include="Packets\PlayerMenuPacket.cs" />
     <Compile Include="Packets\PlayPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -141,6 +142,7 @@
     <Compile Include="Sockets\Events\OpenUrlPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\PartyPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\PlayerMenuPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\PlayPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
