--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Packets\EditModePacket.cs" />
     <Compile Include="Packets\EditObjectPacket.cs" />
     <Compile Include="Packets\FocusPacket.cs" />
+    <Compile Include="Packets\GuildMiscellaneousPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Sockets\Events\EditModePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\EditObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\FocusPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\GuildMiscellaneousPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
