--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Packets\PartyPacket.cs" />
     <Compile Include="Packets\PlayerMenuPacket.cs" />
     <Compile Include="Packets\PlayPacket.cs" />
+    <Compile Include="Packets\RemoveCharacterPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -145,6 +146,7 @@
     <Compile Include="Sockets\Events\PlayerMenuPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\PlayPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\RemoveCharacterPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
