--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Packets\AddObjectPacket.cs" />
     <Compile Include="Packets\AddPlayerPacket.cs" />
     <Compile Include="Packets\AddToBagPacket.cs" />
+    <Compile Include="Packets\AdminPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="Sockets\Events\AddObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AddPlayerPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AddToBagPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\AdminPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
